--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
 	background-color: #f1f1f1;
+	font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -84,4 +85,15 @@ iframe {
 	height: 98%;
 	left: 0;
 }
+.video--info {
+	background-color: #ffffff;
+	width: 98%;
+	display: flex;
+	flex-direction: column;
+}
 
+.something {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
