--- a/style.css
+++ b/style.css
@@ -9,10 +9,20 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+
 .container {
 	display: flex;
 	flex-wrap: wrap;
 	margin-top: 100px;
+}
+
+body i {
+	cursor: pointer;
+	color: gray;
+}
+
+body i:hover {
+	color:black;
 }
 .navigation--menu {
 	display: flex;
@@ -27,7 +37,7 @@ body {
 }
 
 .navigation--menu i {
-	cursor: pointer;
+	font-size: 30px;
 }
 
 .navigation--menu i:hover  {
@@ -63,13 +73,9 @@ form {
 }
 
 .video--playing {
-	height: 60vh;
 	flex: 2;
 	flex-direction: column;
-
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	margin-right: 5px;
 }
 
@@ -88,10 +94,11 @@ form {
 	font-weight: bold;
 }
 
-iframe {
+.video--playing iframe {
 	width: 98%;
-	height: 98%;
-	left: 0;
+	height: 40%;
+	margin-top: 1px;
+	
 }
 .video--info {
 	background-color: #ffffff;
